--- a/views/home/home.ejs
+++ b/views/home/home.ejs
@@ -89,8 +89,9 @@
 
 
 
-
+  
     getCountNewMess();
+   
   </script>
 </head>
 
@@ -113,7 +114,7 @@
                     </div>
                   </div>
                   <div class="bot text-end ">
-                    <a class="icon-link icon-link-hover" style="--bs-link-hover-color-rgb: 25, 135, 84;" href="#">
+                    <a class="icon-link icon-link-hover" style="--bs-link-hover-color-rgb: 25, 135, 84;" href="/tin-nhan">
                       Xem chi tiết ->
                     </a>
                   </div>
