--- a/views/sanpham/chitiet_sanpham.ejs
+++ b/views/sanpham/chitiet_sanpham.ejs
@@ -8,8 +8,8 @@
     <link rel='stylesheet' href='/stylesheets/style_header.css' />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-      <script src="https://kit.fontawesome.com/ae360af17e.js" crossorigin="anonymous"></script>
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/ae360af17e.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="/stylesheets/sidebar.css">
     <style>
@@ -17,11 +17,15 @@
             display: flex;
             justify-content: space-between;
             align-items: flex-start;
+            margin: 0;
+            padding: 0;
         }
 
         .product-info img {
             max-width: 400px;
             height: auto;
+            margin: 0;
+            padding: 0;
         }
 
         .bold-text {
@@ -30,8 +34,7 @@
 
         .slideshow-container {
             position: relative;
-            max-width: 400px;
-            margin: auto;
+            max-width: 500px;
         }
 
         .mySlides {
@@ -71,8 +74,8 @@
         <%- include('../inc/sidebar') %>
             <div class="main ">
                 <%- include('../inc/header') %>
-                    <div class="content col-md-10 sm-10">
-                        <div class="product-info">
+                    <div class="content col-md-10 sm-10 bg-light">
+                        <div class="col product-info">
                             <div class="slideshow-container">
                                 <% for (let i=0; i < sanPham.anh.length; i++) { %>
                                     <div class="mySlides">
@@ -82,16 +85,69 @@
                                         <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
                                         <a class="next" onclick="plusSlides(1)">&#10095;</a>
                             </div>
-                            <div class="mt-3 ms-3">
+                            <div class="col mt-3 ms-5">
                                 <h4>
                                     <%= sanPham.tenSanPham %>
                                 </h4>
-                                <p><strong>Giá tiền:</strong> <span class="text-danger fw-bold total-cell">
-                                        <%= sanPham.bienThe[0].giaTien %>
-                                    </span></p>
-                                <p><strong>Số lượng:</strong>
-                                    <%= sanPham.bienThe[0].soLuong %>
-                                </p>
+                                <p>Cấu hình:</p>
+                                <!-- Sửa biến thể -->
+                        <% if (sanPham.bienThe && sanPham.bienThe.length) { %>
+                            <% for (var i=0; i < sanPham.bienThe.length; i++) { %>
+                                <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                                    data-bs-target="#<%= i %>">
+                                    <%= sanPham.bienThe[i].ram %> + <%= sanPham.bienThe[i].rom %>
+                                </button>
+
+                                <!-- Modal biến thể-->
+                                <div class="modal fade" id="<%= i %>" tabindex="-1" aria-labelledby="exampleModalLabel"
+                                    aria-hidden="true">
+                                    <div class="modal-dialog">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h1 class="modal-title fs-5" id="exampleModalLabel">Chi tiết biến
+                                                    thể</h1>
+                                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                    aria-label="Close"></button>
+                                            </div>
+                                                <div class="modal-body">
+
+                                                    <div class="col">
+                                                        <!-- RAM -->
+                                                        <label for="ram" class="form-label">RAM <span
+                                                                class="text-danger">(*)</span></label>
+                                                        <input disabled type="text" class="form-control" id="ram" name="ram"
+                                                            value="<%= sanPham.bienThe[i].ram %>">
+                                                    </div>
+                                                    <div class="col">
+                                                        <!-- ROM -->
+                                                        <label for="rom" class="form-label">ROM <span
+                                                                class="text-danger">(*)</span></label>
+                                                        <input disabled type="text" class="form-control" id="rom" name="rom"
+                                                            value="<%= sanPham.bienThe[i].rom %>">
+                                                    </div>
+                                                    <div class="col">
+                                                        <!-- Số lượng -->
+                                                        <label for="soLuong" class="form-label">Số lượng <span
+                                                                class="text-danger">(*)</span></label>
+                                                        <input disabled type="number" class="form-control" id="soLuong"
+                                                            name="soLuong" min="1"
+                                                            value="<%= sanPham.bienThe[i].soLuong %>">
+                                                    </div>
+                                                    <div class="col">
+                                                        <!-- Giá tiền -->
+                                                        <label for="giaTien" class="form-label">Giá tiền <span
+                                                                class="text-danger">(*)</span></label>
+                                                        <input disabled type="number" class="form-control" id="giaTien"
+                                                            name="giaTien" min="0" step="any"
+                                                            value="<%= sanPham.bienThe[i].giaTien %>">
+                                                    </div>
+                                                </div>
+                                                
+                                        </div>
+                                    </div>
+                                </div>
+                                <% } %>
+                                    <% } %>
                             </div>
                         </div>
                         <p class="mt-3"><strong>Mô tả:</strong>
@@ -144,11 +200,6 @@
                             <tr>
                                 <td>
                                     <ul>
-                                        <li><strong>RAM:</strong>
-                                            <%= sanPham.bienThe[0].ram %>
-                                        </li><li><strong>ROM:</strong>
-                                            <%= sanPham.bienThe[0].rom %>
-                                        </li>
                                         <li><strong>Loại RAM:</strong>
                                             <%= sanPham.loaiRam %>
                                         </li>
